force-app/main/default/objects/PARPendingApproval__c/PARPendingApproval__c.object-meta.xml
<CustomObject>
    <label>PARPendingApproval</label>
    <nameField>
        <displayFormat>PARP-{00000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PARPendingApproval</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>