force-app/main/default/objects/PARPendingApproval__c/fields/AttemptCount__c.field-meta.xml
<CustomField>
    <fullName>AttemptCount__c</fullName>
    <label>AttemptCount</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>