force-app/main/default/objects/PARPendingApproval__c/fields/CorrelationId__c.field-meta.xml
<CustomField>
    <fullName>CorrelationId__c</fullName>
    <label>CorrelationId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>