force-app/main/default/objects/PARPendingApproval__c/fields/CreatedFromERP__c.field-meta.xml
<CustomField>
    <fullName>CreatedFromERP__c</fullName>
    <defaultValue>true</defaultValue>
    <label>CreatedFromERP</label>
    <type>Checkbox</type>
</CustomField>