force-app/main/default/objects/PARPendingApproval__c/fields/PAR__c.field-meta.xml
<CustomField>
    <fullName>PAR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PAR</label>
    <referenceTo>PriceApprovalRequest__c</referenceTo>
    <relationshipLabel>PARPendingApproval</relationshipLabel>
    <relationshipName>PARPendingApproval</relationshipName>
    <type>Lookup</type>
</CustomField>