force-app/main/default/objects/PARPendingApproval__c/fields/ResponseSentToERP__c.field-meta.xml
<CustomField>
    <fullName>ResponseSentToERP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ResponseSentToERP</label>
    <type>Checkbox</type>
</CustomField>