force-app/main/default/objects/PARPendingApproval__c/fields/StageERP__c.field-meta.xml
<CustomField>
    <fullName>StageERP__c</fullName>
    <label>StageERP</label>
    <length>80</length>
    <type>Text</type>
</CustomField>